# long-doc-summarization-nlp

./: .gitignore  QUICKSTART.md  README.md  app.py  compare_models.py  pyproject.toml  quick_test.py  requirements.txt  summarize_dataset.py  test_pipeline.py
.github/workflows/: ci.yml
data/: README.md  dataset.py  process_pdfs.py
data/processed/: 1512.03385v1.txt  2009.03300v3.txt  2020.emnlp-main.393.txt  2107.03374v2.txt  2110.14168v2.txt  2305.15717v1.txt  2306.05685v4.txt  2310.10628v1.txt  2312.16337v1.txt  2404.18824v1.txt
notebooks/: example.py  interactive_exploration.ipynb
results/: 1512.03385v1_summary.json  2009.03300v3_summary.json  2020.emnlp-main.393_summary.json  2107.03374v2_summary.json  2110.14168v2_summary.json  2305.15717v1_summary.json  2306.05685v4_summary.json  2310.10628v1_summary.json  2312.16337v1-2_summary.json  2312.16337v1_summary.json  2404.18824v1_summary.json  batch_results_hierarchical.json  summary_report_hierarchical.json
src/: chunker.py  evaluator.py  loader.py  retriever.py  summarizer.py
tests/: test_chunker.py  test_evaluator.py  test_retriever.py  test_summarizer.py
